--- a/src/client/app/shared/navbar/navbar.component.html
+++ b/src/client/app/shared/navbar/navbar.component.html
@@ -1,4 +1,6 @@
 <nav>
   <a [routerLink]="['/']">HOME</a>
+  <a [routerLink]="['/members']">MEMBERS</a>
+  <a [routerLink]="['/grid']">GRID</a>
   <a [routerLink]="['/about']">ABOUT</a>
 </nav>
