--- a/src/client/app/+about/about.component.html
+++ b/src/client/app/+about/about.component.html
@@ -13,3 +13,5 @@
   <li>TypeScript definition management using Typings.</li>
   <li>Basic Service Worker, which implements "Cache then network strategy".</li>
 </ul>
+<br/>
+<p>This project is derived from <a href="https://github.com/mgechev/angular2-seed">Minko Gechev seed.</a></p>
